--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -10,7 +10,7 @@
 
     <title>ONG Games - Missão, Visão e Valores</title>
 
-    <!-- Estilo CSS interno para customização -->
+    <!--estilo CSS interno para customização -->
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <!-- Cabeçalho da página -->
+    <!-- cabeçalho da página -->
     <header>
         <h1>ONG Games</h1>
         <p>Transformando vidas através dos jogos</p>
@@ -59,7 +59,7 @@
 
     <!-- Conteúdo principal da página -->
     <main>
-        <!-- Seção Missão -->
+        <!-- seção Missão -->
         <section>
             <!-- Comentário: Seção dedicada à missão da ONG -->
             <h2>Missão</h2>
@@ -68,7 +68,7 @@
             </p>
         </section>
 
-        <!-- Seção Visão -->
+        <!-- seção visão -->
         <section>
             <!-- Comentário: Seção dedicada à visão da ONG -->
             <h2>Onde queremos chegar</h2>
@@ -78,7 +78,7 @@
             </p>
         </section>
 
-        <!-- Seção Valores -->
+        <!-- seção valores -->
         <section>
             <!-- Comentário: Seção dedicada aos valores da ONG -->
             <h2>O que é prezervado na nossa ONG</h2>
@@ -91,7 +91,7 @@
         </section>
     </main>
 
-    <!-- Rodapé da página -->
+    <!-- rodapé da página -->
     <footer>
         <!-- Comentário: Rodapé com informações de contato -->
         <p>&copy; 2025 ONG Dos Games| Todos os direitos reservados</p>
