--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Metadados essenciais para SEO e responsividade -->
+    <!-- metadados essenciais para SEO e responsividade -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONG Esperança - Transformando vidas através dos jogos.">
