--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- metadados essenciais para SEO e responsividade -->
+    <!-- metadados essenciais  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONG Esperança - Transformando vidas através dos jogos.">
@@ -10,7 +10,7 @@
 
     <title>ONG Games - Missão, Visão e Valores</title>
 
-    <!--estilo CSS interno para customização -->
+    <!--estilo CSS  para customização -->
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -70,7 +70,7 @@
 
         <!-- seção visão -->
         <section>
-            <!-- Comentário: Seção dedicada à visão da ONG -->
+            <!--  seção dedicada à visão da ONG -->
             <h2>Onde queremos chegar</h2>
             <p>
                 Ser reconhecida como uma ONG referência egames no Brasil, 
@@ -80,7 +80,7 @@
 
         <!-- seção valores -->
         <section>
-            <!-- Comentário: Seção dedicada aos valores da ONG -->
+            <!--  seção dedicada aos valores da ONG -->
             <h2>O que é prezervado na nossa ONG</h2>
             <ul>
                 <li>Amizade</li>
