--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- metadados essenciais  -->
+    <!-- Metadados essenciais para SEO e responsividade -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONG Esperança - Transformando vidas através dos jogos.">
@@ -10,7 +10,7 @@
 
     <title>ONG Games - Missão, Visão e Valores</title>
 
-    <!--estilo CSS para customização -->
+    <!-- Estilo CSS interno para customização -->
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <!-- cabeçalho da página -->
+    <!-- Cabeçalho da página -->
     <header>
         <h1>ONG Games</h1>
         <p>Transformando vidas através dos jogos</p>
@@ -59,7 +59,7 @@
 
     <!-- Conteúdo principal da página -->
     <main>
-        <!-- seção Missão -->
+        <!-- Seção Missão -->
         <section>
             <!-- Comentário: Seção dedicada à missão da ONG -->
             <h2>Missão</h2>
@@ -68,9 +68,9 @@
             </p>
         </section>
 
-        <!-- seção visão -->
+        <!-- Seção Visão -->
         <section>
-            <!--  seção dedicada à visão da ONG -->
+            <!-- Comentário: Seção dedicada à visão da ONG -->
             <h2>Onde queremos chegar</h2>
             <p>
                 Ser reconhecida como uma ONG referência egames no Brasil, 
@@ -78,9 +78,9 @@
             </p>
         </section>
 
-        <!-- seção valores -->
+        <!-- Seção Valores -->
         <section>
-            <!--  seção dedicada aos valores da ONG -->
+            <!-- Comentário: Seção dedicada aos valores da ONG -->
             <h2>O que é prezervado na nossa ONG</h2>
             <ul>
                 <li>Amizade</li>
@@ -91,12 +91,12 @@
         </section>
     </main>
 
-    <!-- rodapé da página -->
+    <!-- Rodapé da página -->
     <footer>
         <!-- Comentário: Rodapé com informações de contato -->
         <p>&copy; 2025 ONG Dos Games| Todos os direitos reservados</p>
         <p>Email: Games@onggames.org</p>
-         <img src="./assets/Hollow_Knight_sem_borda_1.png.png" alt="Logo ONG" class="footer-img">
+        <img src="./assets/Hollow_Knight_sem_borda (1).png" alt="Logo ONG" class="footer-img">
         
     </footer>
 </body>
