--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Metadados essenciais para SEO e responsividade -->
+    <!-- metadados essenciais  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONG Esperança - Transformando vidas através dos jogos.">
@@ -10,7 +10,7 @@
 
     <title>ONG Games - Missão, Visão e Valores</title>
 
-    <!-- Estilo CSS interno para customização -->
+    <!-- estilo CSS  para customização -->
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -51,15 +51,15 @@
     </style>
 </head>
 <body>
-    <!-- Cabeçalho da página -->
+    <!-- cabeçalho da página -->
     <header>
         <h1>ONG Games</h1>
         <p>Transformando vidas através dos jogos</p>
     </header>
 
-    <!-- Conteúdo principal da página -->
+    <!-- conteúdo principal da página -->
     <main>
-        <!-- Seção Missão -->
+        <!-- seção missão -->
         <section>
             <!-- Comentário: Seção dedicada à missão da ONG -->
             <h2>Missão</h2>
@@ -68,9 +68,9 @@
             </p>
         </section>
 
-        <!-- Seção Visão -->
+        <!-- seção visão -->
         <section>
-            <!-- Comentário: Seção dedicada à visão da ONG -->
+            <!--  seção dedicada à visão da ONG -->
             <h2>Onde queremos chegar</h2>
             <p>
                 Ser reconhecida como uma ONG referência egames no Brasil, 
@@ -78,9 +78,9 @@
             </p>
         </section>
 
-        <!-- Seção Valores -->
+        <!-- seção valores -->
         <section>
-            <!-- Comentário: Seção dedicada aos valores da ONG -->
+            <!--  seção dedicada aos valores da ONG -->
             <h2>O que é prezervado na nossa ONG</h2>
             <ul>
                 <li>Amizade</li>
@@ -91,9 +91,9 @@
         </section>
     </main>
 
-    <!-- Rodapé da página -->
+    <!-- rodapé da página -->
     <footer>
-        <!-- Comentário: Rodapé com informações de contato -->
+        <!--  rodapé com informações de contato -->
         <p>&copy; 2025 ONG Dos Games| Todos os direitos reservados</p>
         <p>Email: Games@onggames.org</p>
         <img src="./assets/Hollow_Knight_sem_borda (1).png" alt="Logo ONG" class="footer-img">
