--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -54,7 +54,7 @@
     <!-- cabeçalho da página -->
     <header>
         <h1>ONG Games</h1>
-        <p>Transformando vidas através dos jogos</p>
+        <article>Transformando vidas através dos jogos</article>
     </header>
 
     <!-- conteúdo principal da página -->
