--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -96,7 +96,7 @@
         <!--  rodapé com informações de contato -->
         <p>&copy; 2025 ONG Dos Games| Todos os direitos reservados</p>
         <p>Email: Games@onggames.org</p>
-        <img src="./assets/Hollow_Knight_sem_borda (1).png" alt="Logo ONG" class="footer-img">
+        <img src="./assets/Hollow_Knight_sem_borda-1.png" alt="Logo ONG" class="footer-img">
         
     </footer>
 </body>
